--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,18 +1,17 @@
 name: php-course-project-1
 type: php
-docroot: "/src"
+docroot: "/src/public"
 php_version: "8.1"
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.4"
+  type: mariadb
+  version: "10.4"
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
-
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
